sinalcabo/force-app/main/default/objects/SC_BU_Director__mdt/SC_BU_Director__mdt.object-meta.xml
<CustomObject>
    <label>SC BU Director</label>
    <pluralLabel>SC BU Directors</pluralLabel>
</CustomObject>