sinalcabo/force-app/main/default/objects/SC_BU_Director__mdt/fields/BU_Label__c.field-meta.xml
<CustomField>
    <fullName>BU_Label__c</fullName>
    <label>BU Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>