sinalcabo/force-app/main/default/objects/SC_BU_Director__mdt/fields/PVD_User_Id__c.field-meta.xml
<CustomField>
    <fullName>PVD_User_Id__c</fullName>
    <label>PVD User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>