sinalcabo/force-app/main/default/objects/SC_BU_Director__mdt/fields/Threshold_L2__c.field-meta.xml
<CustomField>
    <fullName>Threshold_L2__c</fullName>
    <label>Threshold L2 (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>